--- a/.github/actions/promote-to-stable/action.yml
+++ b/.github/actions/promote-to-stable/action.yml
@@ -52,9 +52,9 @@ runs:
         # Cloud specific promote
         # delivery by default to onprem, override to internal if base branch is master
         if [[ ${{ inputs.github_base_ref }} == "master" ]]; then
-          ROOT_REPO_PATH="rpm-standard-internal"
+          ROOT_REPO_PATH="test-rpm-standard-internal"
         else
-          ROOT_REPO_PATH="rpm-standard"
+          ROOT_REPO_PATH="test-rpm-standard"
         fi
 
         # Search for testing packages candidate for promote
