--- a/.github/workflows/dsm.yml
+++ b/.github/workflows/dsm.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   workflow_dispatch:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - synchronize
@@ -31,7 +31,21 @@ env:
   module: dsm
 
 jobs:
+  validation:
+    runs-on: ubuntu-22.04
+    outputs:
+      environment_pull_request: ${{ steps.validate.outputs.environment_pull_request }}
+    steps:
+      - name: validate
+        run: |
+          ENVIRONMENT_PULL_REQUEST="external_contributor"
+          if [[ "${{ github.author_association }}" != "MEMBER" || "${{ github.author_association }}" != "CONTRIBUTOR" || "${{ github.author_association }}" != "OWNER" ]]; then
+            ENVIRONMENT_PULL_REQUEST="internal_contributor"
+          fi
+          echo "environment_pull_request=$ENVIRONMENT_PULL_REQUEST" >> $GITHUB_OUTPUT
+
   get-version:
+    environment: ${{ need.validation.outputs.environment_pull_request }}
     uses: ./.github/workflows/get-version.yml
     with:
       version_file: centreon-dsm/www/modules/centreon-dsm/conf.php
