--- a/.github/workflows/dsm.yml
+++ b/.github/workflows/dsm.yml
@@ -39,7 +39,7 @@ jobs:
       - name: validate
         run: |
           ENVIRONMENT_PULL_REQUEST="external_contributor"
-          if [[ "${{ github.author_association }}" != "MEMBER" || "${{ github.author_association }}" != "CONTRIBUTOR" || "${{ github.author_association }}" != "OWNER" ]]; then
+          if [[ "${{ github.event.pull_request.author_association }}" != "MEMBER" || "${{ github.event.pull_request.author_association }}" != "CONTRIBUTOR" || "${{ github.event.pull_request.author_association }}" != "OWNER" ]]; then
             ENVIRONMENT_PULL_REQUEST="internal_contributor"
           fi
           echo "environment_pull_request=$ENVIRONMENT_PULL_REQUEST" >> $GITHUB_OUTPUT
