--- a/.github/workflows/dsm.yml
+++ b/.github/workflows/dsm.yml
@@ -33,8 +33,8 @@ env:
 jobs:
   validation:
     runs-on: ubuntu-22.04
-    outputs:
-      environment_pull_request: ${{ steps.validate.outputs.environment_pull_request }}
+#    outputs:
+#      environment_pull_request: ${{ steps.validate.outputs.environment_pull_request }}
     steps:
       - name: validate
         id: validate
