--- a/.github/workflows/get-version.yml
+++ b/.github/workflows/get-version.yml
@@ -4,6 +4,10 @@ on:
       version_file:
         required: true
         type: string
+      environment_pull_request:
+        description: "environment for pull request runs"
+        required: true
+        type: string        
     outputs:
       major_version:
         description: "major version"
@@ -29,6 +33,7 @@ on:
       release_cloud:
         description: "context of release (cloud or not cloud)"
         value: ${{ jobs.get-version.outputs.release_cloud }}
+
 
 jobs:
   get-version:
