--- a/.github/workflows/check-status.yml
+++ b/.github/workflows/check-status.yml
@@ -5,7 +5,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - develop
       - dev-[2-9][0-9].[0-9][0-9].x
@@ -15,14 +15,14 @@ on:
       - release-*
 
 jobs:
-  check-status:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+  set-pr-environment:
+    uses: ./.github/workflows/set-pr-environment.yml
 
+  check-status:
+    needs: [set-pr-environment]
+    runs-on: ubuntu-24.04
+    environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
+    steps:
       - name: Check workflow statuses and display token usage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
