--- a/.github/workflows/check-status.yml
+++ b/.github/workflows/check-status.yml
@@ -5,7 +5,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - develop
       - dev-[2-9][0-9].[0-9][0-9].x
@@ -15,13 +15,8 @@ on:
       - release-*
 
 jobs:
-  set-pr-environment:
-    uses: ./.github/workflows/set-pr-environment.yml
-
   check-status:
-    needs: [set-pr-environment]
     runs-on: ubuntu-24.04
-    environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
     steps:
       - name: Check workflow statuses and display token usage
         env:
