--- a/.github/workflows/docker-keycloak.yml
+++ b/.github/workflows/docker-keycloak.yml
@@ -16,9 +16,14 @@ on:
       - ".github/docker/keycloak/**"
 
 jobs:
+  set-pr-environment:
+    uses: ./.github/workflows/set-pr-environment.yml
+
   get-version:
     uses: ./.github/workflows/get-version.yml
+    needs: [set-pr-environment]
     with:
+      pull_request_environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
       version_file: centreon/www/install/insertBaseConf.sql
 
   create-and-push-docker:
