--- a/.github/workflows/docker-stable.yml
+++ b/.github/workflows/docker-stable.yml
@@ -14,9 +14,14 @@ on:
   workflow_dispatch:
 
 jobs:
+  set-pr-environment:
+    uses: ./.github/workflows/set-pr-environment.yml
+
   get-version:
     uses: ./.github/workflows/get-version.yml
+    needs: [set-pr-environment]
     with:
+      pull_request_environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
       version_file: centreon/www/install/insertBaseConf.sql
 
   dockerize-stable:
