--- a/.github/workflows/docker-translation.yml
+++ b/.github/workflows/docker-translation.yml
@@ -17,9 +17,14 @@ on:
       - ".github/docker/Dockerfile.translation"
 
 jobs:
+  set-pr-environment:
+    uses: ./.github/workflows/set-pr-environment.yml
+
   get-version:
     uses: ./.github/workflows/get-version.yml
+    needs: [set-pr-environment]
     with:
+      pull_request_environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
       version_file: centreon/www/install/insertBaseConf.sql
 
   dockerize:
