--- a/.github/workflows/get-version.yml
+++ b/.github/workflows/get-version.yml
@@ -53,7 +53,9 @@ jobs:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+        run: |
+          echo "$GITHUB_CONTEXT"
+          echo "base repo name = ${{ github.event.pull_request.base.repo.name }}"
 
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
