--- a/.github/workflows/ui-stable.yml
+++ b/.github/workflows/ui-stable.yml
@@ -21,9 +21,14 @@ env:
   AWS_DEFAULT_REGION: eu-west-1
 
 jobs:
+  set-pr-environment:
+    uses: ./.github/workflows/set-pr-environment.yml
+
   get-version:
     uses: ./.github/workflows/get-version.yml
+    needs: [set-pr-environment]
     with:
+      pull_request_environment: ${{ needs.set-pr-environment.outputs.pull_request_environment }}
       version_file: centreon/www/install/insertBaseConf.sql
 
   publish-new-npm-version:
