--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   release:
-    if: ${{ github.event.pull_request.merged == true }}
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: ubuntu-22.04
     steps:
       - name: Check base_ref
