--- a/.github/workflows/awie.yml
+++ b/.github/workflows/awie.yml
@@ -160,7 +160,9 @@ jobs:
 
   deliver-rpm:
     needs: [get-version, package]
-    if: ${{ contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) }}
+    if: |
+      contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: [self-hosted, common]
     environment: ${{ needs.get-version.outputs.environment }}
 
@@ -186,7 +188,9 @@ jobs:
 
   deliver-deb:
     needs: [get-version, package]
-    if: ${{ contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) }}
+    if: |
+      contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: [self-hosted, common]
     environment: ${{ needs.get-version.outputs.environment }}
 
