--- a/.github/workflows/docker-keycloak.yml
+++ b/.github/workflows/docker-keycloak.yml
@@ -17,6 +17,7 @@ on:
 
 jobs:
   set-pr-environment:
+    if: github.event.pull_request.base.repo.name  == 'centreon'
     uses: ./.github/workflows/set-pr-environment.yml
 
   get-version:
