--- a/.github/workflows/dsm.yml
+++ b/.github/workflows/dsm.yml
@@ -60,8 +60,6 @@ jobs:
 
   backend-lint:
     runs-on: ubuntu-22.04
-    # test do remove
-    if: github.event.pull_request.base.repo.name  == 'centreon'
     needs: [get-version]
 
     steps:
@@ -148,7 +146,10 @@ jobs:
   deliver-sources:
     runs-on: [self-hosted, common]
     needs: [get-version, package]
-    if: ${{ contains(fromJson('["stable"]'), needs.get-version.outputs.stability) && github.event_name != 'workflow_dispatch'}}
+    if: |
+      contains(fromJson('["stable"]'), needs.get-version.outputs.stability) &&
+      github.event_name != 'workflow_dispatch' &&
+      github.event.pull_request.base.repo.name  == 'centreon'
 
     steps:
       - name: Checkout sources
@@ -166,7 +167,9 @@ jobs:
 
   deliver-rpm:
     needs: [get-version, package]
-    if: ${{ contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) }}
+    if: |
+      contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: [self-hosted, common]
     environment: ${{ needs.get-version.outputs.environment }}
 
@@ -192,7 +195,9 @@ jobs:
 
   deliver-deb:
     needs: [get-version, package]
-    if: ${{ contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) }}
+    if: |
+      contains(fromJson('["testing", "unstable"]'), needs.get-version.outputs.stability) &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: [self-hosted, common]
     environment: ${{ needs.get-version.outputs.environment }}
 
