--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -110,7 +110,7 @@ jobs:
   gherkin-lint:
     runs-on: ubuntu-22.04
     needs: [changes]
-    if: ${{ needs.changes.outputs.has_features_changes == 'true' }}
+    if: needs.changes.outputs.has_features_changes == 'true'
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
@@ -119,7 +119,11 @@ jobs:
           features_path: centreon/tests/e2e/features
 
   dispatch-to-maintained-branches:
-    if: ${{ github.run_attempt == 1 && github.event_name == 'schedule' && github.ref_name == 'develop' && github.event.pull_request.base.repo.name == 'centreon' }}
+    if: |
+      github.run_attempt == 1 &&
+      github.event_name == 'schedule' &&
+      github.ref_name == 'develop' &&
+      github.event.pull_request.base.repo.name == 'centreon'
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout sources
@@ -230,8 +234,9 @@ jobs:
   frontend-web-lint:
     runs-on: ubuntu-22.04
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_frontend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
-
+    if: |
+      needs.changes.outputs.has_frontend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
@@ -246,7 +251,9 @@ jobs:
   frontend-widgets-lint:
     runs-on: ubuntu-22.04
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_frontend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      needs.changes.outputs.has_frontend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -260,7 +267,9 @@ jobs:
   frontend-unit-test:
     runs-on: ubuntu-22.04
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_frontend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      needs.changes.outputs.has_frontend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -295,7 +304,9 @@ jobs:
 
   frontend-component-test:
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_frontend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      needs.changes.outputs.has_frontend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
     uses: ./.github/workflows/cypress-component-parallelization.yml
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.LIGHTHOUSE_ID }}
@@ -309,7 +320,9 @@ jobs:
   backend-unit-test:
     runs-on: ubuntu-22.04
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_backend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      needs.changes.outputs.has_backend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -341,7 +354,9 @@ jobs:
   backend-lint:
     runs-on: ubuntu-22.04
     needs: [changes, get-version]
-    if: ${{ needs.changes.outputs.has_backend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      needs.changes.outputs.has_backend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -395,7 +410,11 @@ jobs:
         frontend-unit-test,
         frontend-component-test,
       ]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.get-version.outputs.stability != 'stable'
 
     strategy:
       fail-fast: false
@@ -537,7 +556,11 @@ jobs:
   dockerize:
     runs-on: ubuntu-22.04
     needs: [get-version, package]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.get-version.outputs.stability != 'stable'
 
     env:
       project: centreon-web
@@ -666,7 +689,12 @@ jobs:
 
   create-xray-test-plan-and-test-execution:
     needs: [get-version, dockerize]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && ( needs.get-version.outputs.stability == 'testing' || github.event_name == 'schedule' ) }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      ( needs.get-version.outputs.stability == 'testing' || github.event_name == 'schedule' ) &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     strategy:
       fail-fast: false
       matrix:
@@ -686,7 +714,11 @@ jobs:
 
   newman-test:
     needs: [get-version, changes, create-xray-test-plan-and-test-execution, dockerize]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.changes.outputs.has_backend_changes == 'true' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.changes.outputs.has_backend_changes == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -717,7 +749,12 @@ jobs:
 
   legacy-e2e-test:
     needs: [get-version, changes, dockerize]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.changes.outputs.has_backend_changes == 'true' && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.changes.outputs.has_backend_changes == 'true' &&
+      needs.get-version.outputs.stability != 'stable'
     strategy:
       fail-fast: false
       matrix:
@@ -740,7 +777,11 @@ jobs:
 
   e2e-test:
     needs: [get-version, dockerize, create-xray-test-plan-and-test-execution]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.get-version.outputs.stability != 'stable'
     strategy:
       fail-fast: false
       matrix:
@@ -775,7 +816,11 @@ jobs:
   performances-test:
     runs-on: ubuntu-22.04
     needs: [get-version, dockerize]
-    if: ${{ !cancelled() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && needs.get-version.outputs.stability != 'stable' }}
+    if: |
+      !cancelled() &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      needs.get-version.outputs.stability != 'stable'
     strategy:
       fail-fast: false
       matrix:
@@ -804,7 +849,9 @@ jobs:
           dependencies_lock_file: centreon/pnpm-lock.yaml
 
       - name: Publish report to S3
-        if: ${{ github.event_name == 'push' }}
+        if: |
+          github.event_name == 'push' &&
+          github.event.pull_request.base.repo.name  == 'centreon'
         uses: ./.github/actions/lighthouse-to-s3
         with:
           report_path: centreon/lighthouse/report/lighthouseci-index.html
@@ -828,8 +875,13 @@ jobs:
         performances-test,
         legacy-e2e-test,
       ]
-    if: ${{ !cancelled() && contains(fromJson('["stable"]'), needs.get-version.outputs.stability) && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && github.event_name != 'workflow_dispatch' }}
-
+    if: |
+      !cancelled() &&
+      contains(fromJson('["stable"]'), needs.get-version.outputs.stability) &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      github.event_name != 'workflow_dispatch' &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     steps:
       - name: Checkout sources
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -855,7 +907,13 @@ jobs:
   publish-openapi-documentation:
     runs-on: [self-hosted, infra]
     needs: [get-version]
-    if: ${{ !cancelled() && contains(fromJson('["stable"]'), needs.get-version.outputs.stability) && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && github.event_name != 'workflow_dispatch' }}
+    if: |
+      !cancelled() &&
+      contains(fromJson('["stable"]'), needs.get-version.outputs.stability) &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      github.event_name != 'workflow_dispatch' &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     steps:
       - name: Checkout sources
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -939,8 +997,12 @@ jobs:
         performances-test,
         legacy-e2e-test,
       ]
-    if: ${{ !cancelled() && contains(fromJson('["testing", "unstable", "pkgtest"]'), needs.get-version.outputs.stability) && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && github.event.pull_request.base.repo.name  == 'centreon' }}
-
+    if: |
+      !cancelled() &&
+      contains(fromJson('["testing", "unstable", "pkgtest"]'), needs.get-version.outputs.stability) &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     environment: ${{ needs.get-version.outputs.environment }}
 
     strategy:
@@ -972,8 +1034,12 @@ jobs:
         performances-test,
         legacy-e2e-test,
       ]
-    if: ${{ !cancelled() && contains(fromJson('["testing", "unstable", "pkgtest"]'), needs.get-version.outputs.stability) && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled') && github.event.pull_request.base.repo.name  == 'centreon' }}
-
+    if: |
+      !cancelled() &&
+      contains(fromJson('["testing", "unstable", "pkgtest"]'), needs.get-version.outputs.stability) &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled') &&
+      github.event.pull_request.base.repo.name  == 'centreon'
     environment: ${{ needs.get-version.outputs.environment }}
 
     strategy:
@@ -1005,6 +1071,7 @@ jobs:
       ! contains(needs.*.result, 'cancelled') &&
       github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: [self-hosted, common]
+
     strategy:
       matrix:
         distrib: [el8, el9, bullseye, bookworm]
