--- a/.github/workflows/docker-translation.yml
+++ b/.github/workflows/docker-translation.yml
@@ -12,7 +12,7 @@ on:
       - dev-[2-9][0-9].[0-9][0-9].x
     paths:
       - ".github/docker/Dockerfile.translation"
-  pull_request_target:
+  pull_request:
     paths:
       - ".github/docker/Dockerfile.translation"
 
@@ -29,7 +29,8 @@ jobs:
       version_file: centreon/www/install/insertBaseConf.sql
 
   dockerize:
-    needs: [get-version]
+    needs: [set-pr-environment, get-version]
+    if: needs.set-pr-environment.outputs.pull_request_environment == 'internal_contributor'
     runs-on: ubuntu-22.04
 
     steps:
