--- a/.github/workflows/docker-keycloak.yml
+++ b/.github/workflows/docker-keycloak.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     paths:
       - ".github/docker/keycloak/**"
   push:
@@ -28,9 +28,9 @@ jobs:
       version_file: centreon/www/install/insertBaseConf.sql
 
   create-and-push-docker:
-    needs: [get-version]
+    needs: [set-pr-environment, get-version]
+    if: needs.set-pr-environment.outputs.pull_request_environment == 'internal_contributor'
     runs-on: ubuntu-22.04
-
     steps:
       - name: Checkout sources
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
