--- a/.github/workflows/docker-web-dependencies.yml
+++ b/.github/workflows/docker-web-dependencies.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     paths:
       - '.github/docker/centreon-web/**/Dockerfile.dependencies'
   schedule:
@@ -25,7 +25,8 @@ jobs:
       version_file: centreon/www/install/insertBaseConf.sql
 
   dockerize:
-    needs: [get-version]
+    needs: [set-pr-environment, get-version]
+    if: needs.set-pr-environment.outputs.pull_request_environment == 'internal_contributor'
     runs-on: ubuntu-24.04
 
     strategy:
