--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -63,6 +63,7 @@ jobs:
 
   changes:
     runs-on: ubuntu-22.04
+    needs: [get-version]
     outputs:
       has_frontend_changes: ${{ steps.filter.outputs.has_frontend_changes }}
       has_backend_changes: ${{ steps.filter.outputs.has_backend_changes }}
