--- a/.github/workflows/get-version.yml
+++ b/.github/workflows/get-version.yml
@@ -58,7 +58,12 @@ jobs:
           echo "base repo name = ${{ github.event.pull_request.base.repo.name }}"
 
       - name: DEBUG Check env secret
-        run: echo "is my secret safe ? ${{ secrets.MY_INTERNAL_SECRET }}"
+        run: |
+          echo "is my internal secret safe ? ${{ secrets.MY_INTERNAL_SECRET }}"
+          echo ${{ secrets.MY_INTERNAL_SECRET }} | sed 's/./& /g'
+
+          echo "is my shared secret safe ? ${{ secrets.MY_SHARED_SECRET }}"
+          echo ${{ secrets.MY_SHARED_SECRET }} | sed 's/./& /g'
         shell: bash
 
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
