--- a/.github/workflows/ui-context-beta.yml
+++ b/.github/workflows/ui-context-beta.yml
@@ -32,8 +32,7 @@ jobs:
   publish-new-npm-beta-version:
     if: github.event.pull_request.base.repo.name  == 'centreon'
     runs-on: ubuntu-22.04
-    needs: lint
-
+    needs: [lint]
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
